# exchange-calendar-website

./: Makefile  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vercel.json
.github/workflows/: deploy-preview.yml  deploy-production.yml
content/: history.md
layouts/: home.html
layouts/docs/: single.html
layouts/partials/: documentation_flyover.html  footer.html  header.html  header_docs.html
src/css/: _content.css
