[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Jens Keiner <jens.keiner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cleo = "^1.0.0a5"
PyYAML = "^6.0"
tomli = "^2.0"
httpx = "^0.23"
tomli-w = "^1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.13.0"

[tool.ruff]
fix = true
unfixable = [
    "ERA", # do not autoremove commented out code
]
target-version = "py310"
line-length = 88
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]

[tool.black]
target-version = ["py310"]
preview = true

[tool.website.config]
baseURL = "https://exchange-calendar.org/"
languageCode = "en-us"
title = "Exchange Calendar - trading calendars made easy"

ignoreFiles = ["^assets/src"]
pygmentsUseClasses = true

[tool.website.config.permalinks]
categories = "/blog/category/:title/"
tags = "/blog/tag/:title/"

[tool.website.config.params]
description = "Trading calendars, simplified."

[tool.website.config.params.extensions.documentation]
defaultVersion = "main"

[tool.website.config.markup.goldmark.renderer]
unsafe = true

[tool.website.config.minify.tdewolff.html]
keepWhitespace = true

[tool.website.extensions.versions]
"0.6.0" = "0.6.0"
"0.7.0" = "0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
